# LMBrain

./: .gitattributes  .gitignore  AGENTS.md  BUG-REPORT.md  CODEX-HANDOFF-PROMPT.md  CODEX-SUPPORT-PLAN.md  Cargo.toml  FEATURE-PLAN.md  README.md  REFACTOR-PLAN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.test.json  vite.config.ts
.github/: CODEOWNERS
.github/workflows/: build-installers.yml
.lmbrain/: .gitignore  AGENT.md  BACKLOG.md  CHANGELOG.md  CONTRACT.md  MIGRATIONS.md  OPERATOR.md  PROJECT.md  QUALITY.md  README.md  ROADMAP.md  STATUS.md
.lmbrain/agents/: README.md  registry.md
.lmbrain/decisions/: ADR-001-desktop-first-tauri.md  ADR-002-in-app-artifact-status-writes.md  ADR-003-reject-as-first-class-status.md  ADR-004-controlled-mutation-engine-mcp.md  ADR-005-retire-tasks-spec-board.md  ADR-006-session-process-execution.md  (+2 more)
app-design/: LMBrain.dc.html  LMBrainTaskCard.dc.html
docs/: README.md  agent-hosts.md  architecture.md  development.md  kit.md  product.md  release.md  repository.md  sessions.md
kit/: README.md
lmbrain-core/: Cargo.toml
lmbrain-core/src/: context.rs  frontmatter.rs  harness_manifest.rs  improvement.rs  invariants.rs  lib.rs  mutation_lock.rs  path.rs  transitions.rs  verification.rs
lmbrain-core/tests/: transitions.rs
lmbrain-mcp/: Cargo.toml
scripts/: check-version.mjs  prepare-sidecar.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: antigravity_registration.rs  codex_registration.rs  contract.rs  design.rs  filesystem.rs  git.rs  git_details.rs  github_integration.rs  harness_approval.rs  harness_materializer.rs  harness_planner.rs  harnesses.rs  mcp_registration.rs  mod.rs  opencode_registration.rs  parser.rs  pi_registration.rs  process.rs  sessions.rs  watcher.rs  workspace.rs
src-tauri/src/models/: adr.rs  agent.rs  design.rs  file.rs  handoff.rs  harness.rs  mcp.rs  mod.rs  pulse.rs  review.rs  roadmap.rs  session.rs  skill.rs  spec.rs  statistics.rs  task.rs  wiki.rs  workspace.rs
src-tauri/tests/: contract_test.rs  design_test.rs  parser_test.rs  path_safety_test.rs  workspace_test.rs
(+208 files in other folders)
