[package]
name = "lmbrain"
version = "1.0.4"
description = "LMBrain - Local Markdown Project Brain"
authors = ["LMBrain"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "lmbrain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3" }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
notify = { version = "8", features = ["macos_fsevent"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
glob = "0.3"
regex = "1"
uuid = { version = "1", features = ["v4"] }
serde_yaml = "0.9"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
